fix overflow error

--- a/styles/modal-settings.less
+++ b/styles/modal-settings.less
@@ -54,6 +54,7 @@
         bottom: 47px;
         left: 249px;
         border-left: 1px solid #1a1d22;
+        overflow: auto;
     }
 
     .settings-form {
